fix problem where extra file menu appears in the menu bar on Mac OS X 10.5. b=385966 r=cbarrett sr=roc